<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp">

        <LinearLayout
            android:id="@+id/ll_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="36dp"
            android:gravity="start">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/desc_of_home"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_succesLogin"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/img_congrats"
            android:contentDescription="@string/desc_of_image_succesLogin" />

        <TextView
            android:id="@+id/tv_loginsucces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_success"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="24dp"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_button_solid" />

        <ProgressBar
            android:id="@+id/pb_loadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>