<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/img_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:text="@string/desc_of_login"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="textStart"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/edt_usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:maxLines="1"
            android:maxLength="30"
            android:hint="@string/username"
            android:autofillHints="@string/username"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:inputType="text"
            android:background="@drawable/rounded_edittext" />

        <EditText
            android:id="@+id/edt_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:maxLines="1"
            android:maxLength="30"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext" />

        <Switch
            android:id="@+id/switch_rememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/remember_me"
            android:textSize="16sp"
            android:textColor="@color/colorFontLight"
            android:textAlignment="textEnd"
            android:switchPadding="12dp"/>

        <Button
            android:id="@+id/btn_loginLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_button_solid" />

        <ProgressBar
            android:id="@+id/pb_loadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/dont_have_account"
                android:textSize="16sp"
                android:textColor="@color/colorFontLight"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btn_dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:background="@color/transparant"
                android:textAlignment="textStart"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>