<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:padding="47dp"
            android:background="@drawable/rounded_header_gradient">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/desc_of_register"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="textStart" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="47dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/edt_usernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="28"
                    android:hint="@string/username"
                    android:autofillHints="@string/username"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/edt_emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="28"
                    android:hint="@string/email"
                    android:autofillHints="@string/email"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/edt_nimRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="28"
                    android:hint="@string/nim"
                    android:autofillHints="@string/nim"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleContentDescription="Show password"
                app:passwordToggleTint="@color/colorPrimaryDark"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/edt_passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="28"
                    android:hint="@string/password"
                    android:autofillHints="@string/password"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rounded_button_solid" />

            <ProgressBar
                android:id="@+id/pb_loadingLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/have_an_account"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btn_loginRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/transparant"
                    android:textAlignment="textStart"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>